Resolve several warnings